--- a/css/sass/partials/_elements.scss
+++ b/css/sass/partials/_elements.scss
@@ -376,6 +376,7 @@
     .title-img-wrap {
 
         overflow: hidden;
+        position: relative;
 
         .title-img {
             background-position: center;
